5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1633_2943.log
== SUBMITION (2019-04-02 19:21:44) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
total=math(2pi**2*raio*raiodotubo**2*qderosquinha)
print(round(total,2))
-- EXECUTION TIME:
0.145015
-- ERROR:
  File "/home/codebench/codes/1633/2943/main.py", line 4
    total=math(2pi**2*raio*raiodotubo**2*qderosquinha)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:22:28) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
total=math(2pi**2*raio*raiodotubo**2*qderosquinha)
print(round(raio,raiodotubo,total,2))
-- EXECUTION TIME:
0.178784
-- ERROR:
  File "/home/codebench/codes/1633/2943/main.py", line 4
    total=math(2pi**2*raio*raiodotubo**2*qderosquinha)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:34) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
total=math(2pi**2*raio*raiodotubo**2*qderosquinha)
print(round(raio,raiodotubo,total,2))
-- ERROR:
File "XXXX", line 4
    total=math(2pi**2*raio*raiodotubo**2*qderosquinha)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:24:49) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
math(2pi**2*raio*raiodotubo**2*qderosquinha)
print(round(raio,raiodotubo,qderosquinha,2))
-- EXECUTION TIME:
0.138409
-- ERROR:
  File "/home/codebench/codes/1633/2943/main.py", line 4
    math(2pi**2*raio*raiodotubo**2*qderosquinha)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:51) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
math(2pi**2*raio*raiodotubo**2*qderosquinha)
print(round(raio,raiodotubo,qderosquinha,2))
-- ERROR:
File "XXXX", line 4
    math(2pi**2*raio*raiodotubo**2*qderosquinha)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:25:08) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
print(round(raio,raiodotubo,qderosquinha,2))
-- EXECUTION TIME:
0.139132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    print(round(raio,raiodotubo,qderosquinha,2))
TypeError: round() takes at most 2 arguments (4 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:25:12) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
print(round(raio,raiodotubo,qderosquinha,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(raio,raiodotubo,qderosquinha,2))
TypeError: round() takes at most 2 arguments (4 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:25:28) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
print(round(raio,raiodotubo,qderosquinha,2))
-- EXECUTION TIME:
0.19532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    print(round(raio,raiodotubo,qderosquinha,2))
TypeError: round() takes at most 2 arguments (4 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:25:30) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
print(round(raio,raiodotubo,qderosquinha,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(raio,raiodotubo,qderosquinha,2))
TypeError: round() takes at most 2 arguments (4 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:25:38) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
print(round(raio,raiodotubo,qderosquinha,2))
-- EXECUTION TIME:
0.137481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    print(round(raio,raiodotubo,qderosquinha,2))
TypeError: round() takes at most 2 arguments (4 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:28:37) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*pi**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.143905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    m= math (2*pi**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:40) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*pi**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math (2*pi**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:29:52) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.139045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:57) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:10) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:30:17) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.135366
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:19) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:30:31) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.208864
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:35:41) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.178619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:43) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:35:57) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.15954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2943/main.py", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:05) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math (2*3.14**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:36:37) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.145669
-- TEST CASE 1:
---- input:
8.4
2.5
100
---- correct output:
103630.85
---- user output:
103525.8
-- TEST CASE 2:
---- input:
14.1
3.8
5
---- correct output:
20094.91
---- user output:
20074.54
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:43:05) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*3.14**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- OUTPUT:
103525.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:44:07) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*pi**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m=(2*pi**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:45:07) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m= math(2*pi**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m= math(2*pi**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:46:22) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*pi**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    m=(2*pi**2*raio*raiodotubo**2*qderosquinha)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:04) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*3.1444**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- OUTPUT:
103816.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:47:28) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*3.1444**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- OUTPUT:
103816.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:48:03) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*3.1444**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- EXECUTION TIME:
0.127995
-- TEST CASE 1:
---- input:
8.4
2.5
100
---- correct output:
103630.85
---- user output:
103816.14
-- TEST CASE 2:
---- input:
14.1
3.8
5
---- correct output:
20094.91
---- user output:
20130.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:48:13) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
m=(2*3.1444**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- OUTPUT:
103816.14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:34) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
from math(2*3.144**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    from math(2*3.144**2*raio*raiodotubo**2*qderosquinha)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:49:47) 
-- CODE:
raio=float(input("digite o numero"))
raiodotubo=float(input("digite o numero"))
qderosquinha=int(input("digite o numero"))
from math(2*pi**2*raio*raiodotubo**2*qderosquinha)
print(round(m,2))
-- ERROR:
File "XXXX", line 4
    from math(2*pi**2*raio*raiodotubo**2*qderosquinha)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
